[package]
name = "custom-recursive"
version = "0.1.0"
authors = ["Daria Sukhonina dariasukhonina@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Execute your recursive functions in many different ways"
repository = "https://github.com/ZetaNumbers/custom-recursive"
documentation = "https://docs.rs/custom-recursive"
readme = "README.md"
keywords = ["recursive"]

[dependencies]
